# vara_network

contract/: Cargo.toml
